@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,35 +23,49 @@
 
 package org.openjdk.foreigntest;
 
-import jdk.incubator.foreign.*;
-import org.testng.annotations.Test;
+import java.lang.foreign.*;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.reflect.Method;
 
 public class PanamaMainUnnamedModule {
-   @Test
-   public void testReflection() throws Throwable {
-       Method method = CLinker.class.getDeclaredMethod("systemCLinker");
+
+    static {
+        System.loadLibrary("LinkerInvokerUnnamed");
+    }
+
+    public static void main(String[] args) throws Throwable {
+        testReflection();
+        testSetAccessible();
+        testInvoke();
+        testDirectAccess();
+        testJNIAccess();
+    }
+
+   public static void testReflection() throws Throwable {
+       Method method = Linker.class.getDeclaredMethod("nativeLinker");
        method.invoke(null);
    }
 
-   @Test
-   public void testSetAccessible() throws Throwable {
-       Method method = CLinker.class.getDeclaredMethod("systemCLinker");
+   public static void testSetAccessible() throws Throwable {
+       Method method = Linker.class.getDeclaredMethod("nativeLinker");
        method.setAccessible(true);
        method.invoke(null);
    }
 
-   @Test
-   public void testInvoke() throws Throwable {
-       var mh = MethodHandles.lookup().findStatic(CLinker.class, "systemCLinker",
-           MethodType.methodType(CLinker.class));
-       var linker = (CLinker)mh.invokeExact();
+   public static void testInvoke() throws Throwable {
+       var mh = MethodHandles.lookup().findStatic(Linker.class, "nativeLinker",
+           MethodType.methodType(Linker.class));
+       var linker = (Linker)mh.invokeExact();
    }
 
-   @Test
-   public void testDirectAccess() throws Throwable {
-       CLinker.systemCLinker();
+   public static void testDirectAccess() {
+       Linker.nativeLinker();
    }
+
+   public static void testJNIAccess() {
+        nativeLinker0();
+    }
+
+    static native void nativeLinker0();
 }
